# FrontISTR

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile
cmake/: FindMetis.cmake  FindMumps.cmake  (+1 more)
hecmw1/: CMakeLists.txt
hecmw1/src/common/: CMakeLists.txt
hecmw1/src/couple/: CMakeLists.txt
hecmw1/src/etc/: CMakeLists.txt
hecmw1/src/hecmw/: CMakeLists.txt
hecmw1/src/operations/adaptation/: CMakeLists.txt
hecmw1/src/operations/dynamic_load_balancing/: CMakeLists.txt
hecmw1/src/operations/jacobian/: CMakeLists.txt
hecmw1/src/solver/: CMakeLists.txt
hecmw1/src/solver/clustermkl/: CMakeLists.txt
hecmw1/src/solver/communication/: CMakeLists.txt
hecmw1/src/solver/init/: CMakeLists.txt
hecmw1/src/solver/iterative/: CMakeLists.txt  hecmw_solver_Iterative.f90
hecmw1/src/solver/las/: CMakeLists.txt
hecmw1/src/solver/matrix/: CMakeLists.txt
hecmw1/src/solver/mpc/: CMakeLists.txt
hecmw1/src/solver/mumps/: CMakeLists.txt
hecmw1/src/solver/precond/: CMakeLists.txt
hecmw1/src/solver/precond/11/: CMakeLists.txt
hecmw1/src/solver/precond/22/: CMakeLists.txt
hecmw1/src/solver/precond/33/: CMakeLists.txt  hecmw_precond_SSOR_33.f90
hecmw1/src/solver/precond/44/: CMakeLists.txt
hecmw1/src/solver/precond/66/: CMakeLists.txt
hecmw1/src/solver/precond/nn/: CMakeLists.txt
hecmw1/src/solver/solver_direct/: CMakeLists.txt
hecmw1/src/solver/solver_direct_lag/: CMakeLists.txt
hecmw1/src/solver/solver_direct_parallel/: CMakeLists.txt
hecmw1/src/solver/sparse_matrix/: CMakeLists.txt
hecmw1/src/visualizer/: CMakeLists.txt
(+127 files in other folders)
